--- a/src/components/doctor/checkapply/checkapply.css
+++ b/src/components/doctor/checkapply/checkapply.css
@@ -3,7 +3,16 @@
   margin-left: 20px;
 }
 .card{
-  width: 350px;
-  margin-left: 50px;
+  width: 330px;
+  height: 200px;
+  margin-left: 30px;
   margin-top: 30px;
+  display: inline-block;
+}
+.existcard{
+  width: 330px;
+  height: 250px;
+  margin-left: 30px;
+  margin-top: 30px;
+  display: inline-block;
 }
